# quake2-exp

./: CMakeLists.txt
.github/workflows/: ci.yml
src/client/: cl_main.c
src/game/: q_shared.c
src/linux/: q_shlinux.c  rw_sdl.c  sys_linux.c
src/qcommon/: common.c  files.c
src/ref_gl/: gl_rmisc.c
